--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<select name="demo" id="#">
-<option selected="selected" value="one">Option 1</option>
-<option value="two">Option 2</option>
-<option value="three">Option 3</option>
-</select>
+<button (click)="onClickMe()">Click me!</button>
+<p>{{clickMessage}}</p>
+<p> Get user input from the $event object
+</p>
+<input (keyup)="onKey($event)">
+<p>{{values}}</p>
